# linux-ipc

./: Cargo.toml  README.md
examples/: client.rs  server.rs
src/: lib.rs
