[package]
name = "linux-ipc"
description = "Easy IPC with Unix sockets on Linux."
version = "0.2.1"
edition = "2021"
authors = ["altacountbabi <https://github.com/altacountbabi>"]
repository = "https://github.com/altacountbabi/linux-ipc"
license = "GPL-3.0-only"
keywords = ["ipc", "linux"]
include = ["src/**/*", "Cargo.toml", "README.md", "examples/**/*"]
exclude = ["target/", ".git/", "Cargo.lock"]
readme = "README.md"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.203", features = ["derive"] }
